--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
-node_modules
-.DS_Store
+# Dependency directories
+node_modules/
+.pnpm/
+.yarn/
+
+# Package lock files
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# IDE / Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Build and log files
 build/
-logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-.vscode
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
