getting router to properly route

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "RIOT Website",
     "version": "0.1.0",
-    "homepage": "https://riot-uark.github.io/",
+    "homepage": "https://bakedpotato101.github.io/riot-website-",
     "private": true,
     "dependencies": {
         "@supabase/supabase-js": "^2.33.1",
